process terminal test